environments/prod/app-frontend-admin/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-front
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: front-admin
  namespace: ns-front
  labels:
    app: front-admin
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: front-admin
  template:
    metadata:
      labels:
        app: front-admin
    spec:
      containers:
      - name: front-admin
        image: reddddddddd/hfte-front-admin:3
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5173
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: front-admin
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}

---
kind: Service
apiVersion: v1
metadata:
  name: front-admin
  namespace: ns-front
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 5173
  selector:
    app: front-admin
